Fix to align the inputs

--- a/css/screen.css
+++ b/css/screen.css
@@ -263,11 +263,13 @@ input[type=checkbox]{
 #input-email{
   margin-bottom: 36.674px;
   float: left;
+  margin-left: 2%;
 }
 
 #input-age-verification{
   margin-bottom: 36.674px;
   float: left;
+  margin-left: 2%;
 }
 
 @media screen and (min-width: 768px){
